[gd_scene load_steps=17 format=3 uid="uid://dmo7ql8f31kes"]

[ext_resource type="Script" path="res://scripts/ui/scr_settings_manager.gd" id="1_57pyb"]
[ext_resource type="Texture2D" uid="uid://6l3e1gxwag7n" path="res://assets/sprites/ui/settings/arrows/frames/spr_arrows_1.png" id="2_4j41e"]
[ext_resource type="Script" path="res://scripts/ui/scr_menu_item.gd" id="2_eo3oh"]
[ext_resource type="PackedScene" uid="uid://i4jyh46grfcy" path="res://scenes/ui/ui_cursor.tscn" id="2_hvmfl"]
[ext_resource type="Texture2D" uid="uid://c5smr15bl8gv8" path="res://assets/sprites/ui/spr_title_menu.png" id="2_o08w6"]
[ext_resource type="Texture2D" uid="uid://coomnwsog1qx0" path="res://assets/sprites/square.png" id="2_ty8bl"]
[ext_resource type="FontFile" uid="uid://dve7mgsjik4dg" path="res://addons/phantom_camera/fonts/Nunito-Regular.ttf" id="4_tudtn"]
[ext_resource type="Texture2D" uid="uid://bm7a6xedxnaq8" path="res://assets/sprites/ui/settings/spr_btn_settingsX2.png" id="4_xu7kj"]
[ext_resource type="Texture2D" uid="uid://dj1q5afv1mlft" path="res://assets/sprites/ui/settings/spr_btn_controlsX2.png" id="6_oyp7e"]
[ext_resource type="Texture2D" uid="uid://c6ht200tjyu23" path="res://assets/sprites/ui/settings/spr_panel.png" id="8_3k3al"]
[ext_resource type="Texture2D" uid="uid://dk5xy26ctmvr8" path="res://assets/sprites/ui/settings/spr_controls_panel.png" id="8_7uloi"]
[ext_resource type="Texture2D" uid="uid://dqroyi3a2oaqn" path="res://assets/sprites/ui/settings/spr_music_volume.png" id="8_41mia"]
[ext_resource type="Texture2D" uid="uid://bk5empq0p278e" path="res://assets/sprites/ui/settings/spr_settings_title.png" id="9_cbjwn"]
[ext_resource type="Texture2D" uid="uid://ke6r5pjimwxu" path="res://assets/sprites/ui/settings/spr_sfx_label.png" id="9_ckb2j"]
[ext_resource type="Texture2D" uid="uid://dskiscxrfg7l5" path="res://assets/sprites/ui/settings/arrows/spr_title_controls.png" id="9_tt56q"]

[sub_resource type="LabelSettings" id="LabelSettings_b6vn3"]
font = ExtResource("4_tudtn")
font_size = 20

[node name="Settings" type="Control"]
process_mode = 3
z_index = 200
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_57pyb")

[node name="ArtTop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 38.0
grow_horizontal = 2

[node name="Arrows" type="TextureRect" parent="ArtTop"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 46.0
texture = ExtResource("2_4j41e")

[node name="TitleMenu" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 192.0
offset_bottom = 45.0
texture = ExtResource("2_o08w6")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -153.0
offset_bottom = 44.0
grow_horizontal = 0
alignment = 1

[node name="OpenSettingsButton" type="Button" parent="HBoxContainer"]
process_mode = 3
layout_mode = 2
mouse_filter = 2
toggle_mode = true
button_pressed = true
action_mode = 0
icon = ExtResource("4_xu7kj")
script = ExtResource("2_eo3oh")

[node name="ControlButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_oyp7e")
script = ExtResource("2_eo3oh")

[node name="SettingsBox" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 0.278431)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -102.0
offset_right = 230.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ty8bl")

[node name="Panel" type="TextureRect" parent="SettingsBox"]
layout_mode = 2
offset_left = 45.0
offset_top = -32.0
offset_right = 416.0
offset_bottom = 226.0
texture = ExtResource("8_3k3al")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="SettingsBox/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 55.0
grow_horizontal = 2
texture = ExtResource("9_cbjwn")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsBox"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -50.0
offset_right = 184.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Music" type="BoxContainer" parent="SettingsBox/VBoxContainer"]
layout_mode = 2
vertical = true
script = ExtResource("2_eo3oh")

[node name="Music_Text" type="TextureRect" parent="SettingsBox/VBoxContainer/Music"]
process_mode = 4
layout_mode = 2
texture = ExtResource("8_41mia")
stretch_mode = 4

[node name="Music (in dB)" type="HScrollBar" parent="SettingsBox/VBoxContainer/Music"]
layout_mode = 2
mouse_filter = 2
min_value = -20.0
max_value = 20.0
page = 2.0
script = ExtResource("2_eo3oh")

[node name="Sounds" type="BoxContainer" parent="SettingsBox/VBoxContainer"]
layout_mode = 2
vertical = true
script = ExtResource("2_eo3oh")

[node name="SFX_Text" type="TextureRect" parent="SettingsBox/VBoxContainer/Sounds"]
process_mode = 4
layout_mode = 2
texture = ExtResource("9_ckb2j")
stretch_mode = 4

[node name="SFX (in dB)" type="HScrollBar" parent="SettingsBox/VBoxContainer/Sounds"]
layout_mode = 2
mouse_filter = 2
min_value = -20.0
max_value = 20.0
page = 2.0
script = ExtResource("2_eo3oh")

[node name="ControlsBox" type="TextureRect" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -130.0
offset_right = 222.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7uloi")
stretch_mode = 5

[node name="Title" type="TextureRect" parent="ControlsBox"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_tt56q")
stretch_mode = 5

[node name="ControlDescription" type="Label" parent="ControlsBox"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 70.0
offset_right = -24.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "WASD - Movimentar
Z - Atacar
Espa√ßo - Pular
Enter - Menu"
label_settings = SubResource("LabelSettings_b6vn3")

[node name="Cursor" parent="." instance=ExtResource("2_hvmfl")]
layout_mode = 0
isSettings = true
menuParentPath = NodePath("../SettingsBox/VBoxContainer")
cursorOffset = Vector2(50, 20)

[connection signal="cursor_selected" from="HBoxContainer/OpenSettingsButton" to="." method="_on_settings_button_cursor_selected"]
[connection signal="toggled" from="HBoxContainer/OpenSettingsButton" to="." method="_on_settings_button_toggled"]
[connection signal="cursor_deselected" from="HBoxContainer/ControlButton" to="." method="_on_control_button_cursor_deselected"]
[connection signal="cursor_selected" from="HBoxContainer/ControlButton" to="." method="_on_control_button_cursor_selected"]
[connection signal="cursor_deselected" from="SettingsBox/VBoxContainer/Music" to="." method="_on_music_cursor_deselected"]
[connection signal="cursor_selected" from="SettingsBox/VBoxContainer/Music" to="." method="_on_music_cursor_selected"]
[connection signal="cursor_deselected" from="SettingsBox/VBoxContainer/Sounds" to="." method="_on_sounds_cursor_deselected"]
[connection signal="cursor_selected" from="SettingsBox/VBoxContainer/Sounds" to="." method="_on_sounds_cursor_selected"]
